--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-.header {
-  position: sticky;
-
-}
-
 .title h2 {
   color: #3bb88c;
   font-size: 25px;
@@ -22,16 +17,46 @@
   margin: 0 0 30px 0;
 }
 
+
+.header {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  color: #fff;
+  transition: 0.5s;
+  font-weight: 500;
+
+
+}
+
+.header.on {
+  color: #000;
+  background: #fff;
+  border-bottom: 1px solid #ddd;
+}
+
+.header .logo {
+  display: block;
+  width: 138px;
+  height: 28px;
+  background: url(../images/logo.png)no-repeat;
+}
+
+
+.header.on .logo {
+  background: url(../images/logo_blue.png) no-repeat;
+}
+
 .header .header_wrap {
   display: flex;
   justify-content: space-between;
-  height: 100px;
+  height: 70px;
   align-items: center;
 }
 
 .header .header_wrap .gnb ul {
   display: flex;
-  gap: 30px;
+  gap: 60px;
 }
 
 .header .header_wrap .rgh {
@@ -49,6 +74,14 @@
 
 }
 
+.header .rgh a {
+  transition: 0.5s;
+}
+
+.header .rgh a:hover {
+  color: #3bb88c;
+}
+
 
 
 
@@ -64,6 +97,124 @@
 
 }
 
+
+
+
+
+
+.mainvisual {}
+
+.mainvisual .maintitle {
+  position: absolute;
+  top: 500px;
+  left: 700px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.mainvisual .maintitle h2 {
+  font-size: 80px;
+  font-weight: 900;
+  color: #3bb88c;
+  margin: 0 0 25px 0;
+}
+
+.mainvisual .maintitle p {
+  margin: 0 0 80px 0;
+  font-size: 100px;
+  font-weight: 900;
+  color: #fff;
+}
+
+.mainvisual .maintitle a {
+  color: #fff;
+  font-size: 20px;
+  border: 1px solid #fff;
+  padding: 15px 40px;
+  border-radius: 30px;
+}
+
+.mainvisual .itm {
+
+  height: 100vh;
+
+}
+
+.mainvisual .itm01 {
+  background: url(../images/section01_01.png) no-repeat center center/cover;
+}
+
+.mainvisual .itm02 {
+  background: url(../images/section01_02.png) no-repeat center center/cover;
+}
+
+.mainvisual .itm03 {
+  background: url(../images/section01_03.png) no-repeat center center/cover;
+}
+
+
+
+
+
+.mainvisual .mainslide .slick-dots {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+
+}
+
+.mainvisual .mainslide .slick-dots>li {
+  display: inline-block;
+  background: #ddd;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin: 0 6px;
+  cursor: pointer;
+}
+
+.mainvisual .mainslide .slick-dots li.slick-active {
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+  background: #3bb88c;
+  transition: 0.5s;
+}
+
+.mainvisual .mainslide .slick-dots button {
+  display: none;
+}
+
+.mainproduct {
+  padding: 100px 0;
+}
+
+.mainproduct .product_box {
+  background: #ddd;
+}
+
+
+.mainproduct .product .product_box .left img {
+  height: 600px
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .maincontent {
   padding: 100px 0;
 }
@@ -73,7 +224,7 @@
 
 
 .maincontent .content_box {
-  border-radius: 50px;
+  border-radius: 30px;
   overflow: hidden;
   margin: 0 0 30px 0;
 }
@@ -84,6 +235,124 @@
   line-height: 1.4;
 }
 
+.maincases {
+  padding: 100px 0;
+}
+
+.maincases .cases {}
+
+.maincases .cases img {
+  height: 500px;
+  width: 400px;
+  border-radius: 30px;
+  object-fit: cover;
+}
+
+.maincases .cases .img_box {
+  position: relative;
+
+}
+
+.maincases .txt {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  z-index: 999;
+  text-shadow: 1px 1px 1px #555;
+}
+
+.maincases .cases .txt span {
+  display: block;
+  font-weight: 700;
+  margin: 0 0 15px 0;
+  color: rgba(255, 255, 255, 0.7);
+
+}
+
+.maincases .cases .txt h3 {
+  font-size: 30px;
+  font-weight: 500;
+  color: #fff;
+
+}
+
+.maincases .cases .txt a {
+  position: absolute;
+  top: 420px;
+  font-size: 20px;
+  color: #fff;
+
+
+
+}
+
+.maincases .cases .txt a>i {
+  font-size: 16px;
+}
+
+
+
+
+.footer {
+  height: 330px;
+  background: #333;
+}
+
+.footer .footer_wrap {
+  font-size: 14px;
+  color: #fff;
+  padding: 50px 0;
+}
+
+.footer .footer_wrap .footer_logo {
+  margin: 0 0 30px 0;
+}
+
+.footer .footer_wrap .top>ul {
+  display: flex;
+  gap: 30px;
+  margin: 0 0 20px 0;
+}
+
+.footer .footer_wrap .middle {
+  line-height: 1.4;
+  margin: 0 0 20px 0;
+}
+
+.footer .footer_wrap .bottom ul {
+  display: flex;
+  gap: 30px;
+  margin: 0 0 30px 0;
+}
+
+.footer .footer_wrap .copy {
+  font-size: 12px;
+  color: #999;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .maintap {
   padding: 100px 0;
 }
@@ -91,6 +360,7 @@
 
 .maintap .tap .top {
   position: relative;
+
   z-index: 998;
 }
 
@@ -98,6 +368,7 @@
 
 
 .maintap .tap .top .tap_menu {
+
   position: absolute;
   top: 150px;
   display: flex;
@@ -140,7 +411,6 @@
 
 .maintap .tap .bottom {
   position: relative;
-
 }
 
 .maintap .bottom .tap_detail .detail_box {
@@ -153,6 +423,7 @@
   position: absolute;
   top: 300px;
   z-index: 998;
+
 
 }
 
