--- a/css/main.css
+++ b/css/main.css
@@ -29,11 +29,14 @@
 
 }
 
+
+
 .header.on {
   color: #000;
   background: #fff;
   border-bottom: 1px solid #ddd;
 }
+
 
 .header .logo {
   display: block;
@@ -54,9 +57,15 @@
   align-items: center;
 }
 
-.header .header_wrap .gnb ul {
+.header .header_wrap .gnb>ul {
   display: flex;
   gap: 60px;
+
+
+}
+
+.header .header_wrap .gnb ul>li {
+  line-height: 30px;
 }
 
 .header .header_wrap .rgh {
@@ -99,30 +108,56 @@
 
 .header .gnb>ul>li {
   position: relative;
+
 }
 
-.header .sub {
+.header .gnb>ul>li .sub {
+  position: absolute;
+  top: 70px;
+  width: 100%;
+  left: 0;
+  z-index: 999;
   height: 0;
+  color: #000;
+
   overflow: hidden;
 
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  z-index: 999;
+}
 
-  text-align: center;
+
+
+.header .gnb:hover>ul>li .sub {
+  height: 200px;
+}
+
+.header .gnb::before {
+  content: "";
+  position: absolute;
+  top: 70px;
+  left: 0;
   width: 100%;
-  line-height: 40px;
+  height: 0;
+
+  background: #fff;
+  z-index: 999;
 
   transition: 0.5s;
 }
 
-.header .gnb:hover>ul>li .sub {
+
+.header .gnb:hover::before {
   height: 200px;
-
-
 }
+
+.header .gnb .sub .sub_box {
+  width: 100%;
+  font-size: 12px;
+  justify-content: center;
+}
+
+
+
+
 
 
 
@@ -145,7 +180,10 @@
 .mainvisual .maintitle h2 {
   font-size: 80px;
   font-weight: 900;
-  color: #3bb88c;
+  text-shadow: 1px 0 3px rgba(255, 255, 255, 0.25);
+  background: linear-gradient(to left, rgba(66, 230, 150, 1) 80%, rgba(59, 179, 184, 1) 100%);
+  color: transparent;
+  -webkit-background-clip: text;
   margin: 0 0 25px 0;
 }
 
@@ -231,13 +269,13 @@
 .mainproduct .right .product_tap {
   position: absolute;
   top: 50%;
-  right: 0;
-  transform: translate(-50%, -50%);
+  right: 70px;
+  transform: translate(0, -50%);
   z-index: 1;
 }
 
 .mainproduct .right .product_tap li {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   background: #cccccf;
   padding: 12px 34px;
@@ -266,18 +304,18 @@
   justify-content: center;
 }
 
-.mainproduct .left li {
+.mainproduct .left .grap {
   position: relative;
 }
 
 .mainproduct .left .txt {
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translate(50%, -50%);
+  left: 70px;
+  transform: translate(0, -50%);
 }
 
-.mainproduct .left .txt span {
+.mainproduct .left .txt .txt_title span {
   display: block;
   font-size: 14px;
   font-weight: 500;
@@ -285,15 +323,31 @@
   margin: 0 0 20px 0;
 }
 
-.mainproduct .left .txt h3 {
+.mainproduct .left .txt .txt_title h3 {
   font-size: 24px;
   font-weight: 700;
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
 }
 
-.mainproduct .left .txt strong {
-  font-size: 30px;
-  font-family: 700;
+.mainproduct .left .txt .txt_title strong {
+  display: block;
+  margin: 0 0 20px 0;
+  font-size: 50px;
+  font-weight: 700;
+}
+
+
+
+.mainproduct .left .txt ul>li {
+  line-height: 34px;
+  font-size: 14px;
+}
+
+.mainproduct .left .txt ul>li strong {
+  width: 80px;
+  display: inline-block;
+  margin: 0 30px 0 0;
+
 }
 
 
@@ -307,16 +361,21 @@
 
 
 
-.mainproduct .left .left_box li {
+
+
+.mainproduct .left .left_box .grap {
   height: 0;
   overflow: hidden;
 
 }
 
-.mainproduct .left .left_box li.on {
+.mainproduct .left .left_box .grap.on {
   height: auto;
 
+
 }
+
+
 
 
 
@@ -446,4 +505,50 @@
 .footer .footer_wrap .copy {
   font-size: 12px;
   color: #999;
+}
+
+
+.quick_menu {
+  position: fixed;
+  bottom: 0;
+  margin: 0 auto;
+  width: 100%;
+  z-index: 990;
+
+}
+
+.quick_menu .content {
+  display: flex;
+  position: relative;
+  width: 768px;
+  background: linear-gradient(to left, #3bb3b8 30%, #42e696 100%);
+  margin: 0 auto;
+  border-radius: 30px 30px 0 0;
+}
+
+.quick_menu .content li {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  width: 100%;
+
+}
+
+.quick_menu .content img {
+  filter: invert(100%);
+  margin: 0 15px 0 0;
+}
+
+.quick_menu .content li~li::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 20px;
+  background: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
