--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@
   color: #000;
   overflow: hidden;
   font-size: 14px;
-  line-height: 1.4;
+
 
 
 }
@@ -170,7 +170,7 @@
 }
 
 .header .gnb>ul>li .sub .sub_box {
-
+line-height:24px;
   font-size: 12px;
   font-weight: 700;
   color: #777;
@@ -182,7 +182,7 @@
 
 .header:hover .gnb>ul>li .sub {
   transition: 0.5s;
-  height: 200px;
+  height: 300px;
 }
 
 
